fix: CORS configuration - use allowedOriginPatterns instead of allowedOrigins
- Fixed CorsConfig.java to use setAllowedOriginPatterns for credentials support
- Fixed WebConfig.java to use allowedOriginPatterns instead of allowedOrigins
- Removed conflicting @CrossOrigin annotations from AuthController and VerificationController
- This resolves: When allowCredentials is true, allowedOrigins cannot contain *